package im.tox.tox4j.av.proto;

option optimize_for = LITE_RUNTIME;


message Call {
  required int32  friendNumber     = 1;
  required bool   audioEnabled     = 2;
  required bool   videoEnabled     = 3;
}

message CallState {
  enum Kind {
    ERROR        = 0;
    FINISHED     = 1;
    SENDING_A    = 2;
    SENDING_V    = 3;
    RECEIVING_A  = 4;
    RECEIVING_V  = 5;
  }

  required uint32  friendNumber     = 1;
  repeated Kind    state            = 2;
}

message ReceiveAudioFrame {
  required uint32  friendNumber     = 1;
  repeated int32   pcm              = 2 [packed = true];
  required uint32  channels         = 3;
  required uint32  samplingRate     = 4;
}

message ReceiveVideoFrame {
  required uint32  friendNumber     = 1;
  required uint32  width            = 2;
  required uint32  height           = 3;
  required bytes   y                = 4;
  required bytes   u                = 5;
  required bytes   v                = 6;
  optional bytes   a                = 7;
}


message AvEvents {
  repeated Call                   call                = 1;
  repeated CallState              callState           = 2;
  repeated ReceiveAudioFrame      receiveAudioFrame   = 3;
  repeated ReceiveVideoFrame      receiveVideoFrame   = 4;
}
